--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SuperSnake</string>
+    <string name="game_view">Game-View</string>
+    <string name="nen_richtig_geiles_default_fragment_f_r_meinen_lieblings_del_fabro">Nen richtig geiles default fragment für meinen lieblings del fabro❤️</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
