--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="nen_richtig_geiles_default_fragment_f_r_meinen_lieblings_del_fabro">Nen richtig geiles default fragment für meinen lieblings del fabro❤️</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
