--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="PLAYER_ONE_NAME">"PLAYER_ONE_NAME"</string>
     <string name="NEW_GAME">"NEW_GAME"</string>
     <string name="START_GAME">"START_GAME"</string>
+    <string name="MOVEMENT">"MOVEMENT"</string>
 
 </resources>
